src/test/deca/context/valid/class/6_declFieldVisibility.deca
/* Description:
     tester class qui possede de field de visibility different

    Historique:
      cree le 08/01/2020
*/

   class A {
   int x;
   protected float y;


   }
