src/test/deca/context/invalid/class/27_examplePoly1.deca
/* Description:
    test invalide en utilisant field protegé
    (example sur le poly)


    Historique:
      cree le 18/01/2020
*/

class A {

  protected int x;

}

{
    A a = new A();
    println(a.x) ;
}
